--- a/DemoCollection/Base.lproj/Other.storyboard
+++ b/DemoCollection/Base.lproj/Other.storyboard
@@ -4,6 +4,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--ScrollView-->
@@ -372,6 +373,23 @@
                                             <segue destination="zJj-GE-b4v" kind="show" id="220-Hy-4Ga"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="LxK-LZ-HTf" style="IBUITableViewCellStyleDefault" id="5Wr-Q5-5JG">
+                                        <rect key="frame" x="0.0" y="143" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="5Wr-Q5-5JG" id="l5g-5c-Ztv">
+                                            <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="输入框" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="LxK-LZ-HTf">
+                                                    <rect key="frame" x="15" y="0.0" width="270" height="43"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
                                 </cells>
                             </tableViewSection>
                         </sections>
@@ -386,10 +404,10 @@
             </objects>
             <point key="canvasLocation" x="881" y="7169"/>
         </scene>
-        <!--倒计时按钮-->
+        <!--自定义按钮-->
         <scene sceneID="08T-zL-3Wc">
             <objects>
-                <viewController id="zJj-GE-b4v" customClass="HMButtonVC" sceneMemberID="viewController">
+                <viewController id="zJj-GE-b4v" customClass="HMViewVC" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="xAZ-jh-LWe"/>
                         <viewControllerLayoutGuide type="bottom" id="hgZ-aG-haM"/>
@@ -399,7 +417,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OgX-r5-nvJ" customClass="HMButton">
-                                <rect key="frame" x="120" y="269" width="80" height="30"/>
+                                <rect key="frame" x="26" y="74" width="80" height="30"/>
                                 <color key="backgroundColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="80" id="eet-8H-agy"/>
@@ -411,18 +429,38 @@
                                 </state>
                                 <connections>
                                     <action selector="clickButton:" destination="zJj-GE-b4v" eventType="touchUpInside" id="BoU-rt-HMx"/>
+                                    <action selector="doHMButton:" destination="zJj-GE-b4v" eventType="touchUpInside" id="Zkm-lQ-8ZO"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gwT-p9-MQY" customClass="HMInputView">
+                                <rect key="frame" x="114" y="74" width="201" height="30"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="lYw-mS-aZI"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="gwT-p9-MQY" secondAttribute="trailing" constant="5" id="4SX-NK-al8"/>
                             <constraint firstItem="OgX-r5-nvJ" firstAttribute="centerY" secondItem="Ifq-bX-IGh" secondAttribute="centerY" id="7dq-75-7k0"/>
+                            <constraint firstItem="OgX-r5-nvJ" firstAttribute="leading" secondItem="Ifq-bX-IGh" secondAttribute="leadingMargin" constant="10" id="DAY-8h-UBs"/>
+                            <constraint firstItem="gwT-p9-MQY" firstAttribute="top" secondItem="xAZ-jh-LWe" secondAttribute="bottom" constant="10" id="FST-eP-V31"/>
                             <constraint firstItem="OgX-r5-nvJ" firstAttribute="centerX" secondItem="Ifq-bX-IGh" secondAttribute="centerX" id="RbM-OG-7N6"/>
+                            <constraint firstItem="gwT-p9-MQY" firstAttribute="leading" secondItem="OgX-r5-nvJ" secondAttribute="trailing" constant="8" id="Way-Yd-bCT"/>
+                            <constraint firstItem="OgX-r5-nvJ" firstAttribute="top" secondItem="xAZ-jh-LWe" secondAttribute="bottom" constant="10" id="pMP-JG-EQB"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="7dq-75-7k0"/>
+                                <exclude reference="RbM-OG-7N6"/>
+                            </mask>
+                        </variation>
                     </view>
-                    <navigationItem key="navigationItem" title="倒计时按钮" id="uj2-Hd-b7N"/>
+                    <navigationItem key="navigationItem" title="自定义按钮" id="uj2-Hd-b7N"/>
                     <connections>
                         <outlet property="mButton" destination="OgX-r5-nvJ" id="hcL-4o-m6A"/>
+                        <outlet property="mInputView" destination="gwT-p9-MQY" id="6XG-sC-4Ib"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Gii-8m-GHL" userLabel="First Responder" sceneMemberID="firstResponder"/>
